random or fps option added, main_2.cpp which tries every combination added

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -12,5 +12,5 @@ find_package(LIBIGL REQUIRED QUIET)
 # Add your project files
 file(GLOB SRCFILES *.cpp)
 
-add_executable(${PROJECT_NAME}_bin main.cpp)
+add_executable(${PROJECT_NAME}_bin main.cpp fiboheap.h)
 target_link_libraries(${PROJECT_NAME}_bin igl::core igl::opengl igl::opengl_glfw )
